--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "require": {
         "php": ">=7.0.0",
         "laravel/framework": "5.3.*",
-        "interactivesolutions/honeycomb-core": "~0.6.0"
+        "interactivesolutions/honeycomb-core": "~0.6.0",
+        "interactivesolutions/honeycomb-url-shortener": "~0.6.0"
     },
     "autoload": {
         "psr-4": {
